@@ -4,6 +4,8 @@ debhelper (13.2.2) UNRELEASED; urgency=medium
     except those starting with a slash "/".
   * SequencerUtil.pm,dh_testroot: Let dh skip dh_testroot when
     the builder supports Rules-Requires-Root and it is set to "no".
+  * Dh_Lib.pm: Provide a more helpful error message when
+    lintian-overrides config files are executable by mistake.
 
  -- Niels Thykier <niels@thykier.net>  Sat, 19 Sep 2020 07:23:08 +0000
 
